--- a/index2.html
+++ b/index2.html
@@ -8,8 +8,8 @@
     <link rel="stylesheet" href="deneme2.css">
 </head>
 <body>
-        <article class=".font-size 20px">
-        <h1>Lorem, ipsum dolor.</h1>
+        <article>
+        <h1 class="color-blue">Lorem, ipsum dolor.</h1>
         <h2>Lorem, ipsum.</h2>
         <p>Lorem ipsum dolor sit.</p>
         <p>Quibusdam culpa doloribus soluta.</p>
