--- a/index3.html
+++ b/index3.html
@@ -8,6 +8,6 @@
     <link rel="stylesheet" href="deneme3.css">
 </head>
 <body>
-    <li>Lorem, ipsum dolor.</li>
+    <li>Lorem ipsum dolor sit amet.</li>
 </body>
 </html>
