--- a/index3.html
+++ b/index3.html
@@ -1,13 +1,12 @@
-<!DOCTYPE html>
-<html lang="en">
+<html lang="tr">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Ödev Sonrası</title>
     <link rel="stylesheet" href="deneme3.css">
 </head>
 <body>
-    eklendi
+    <h1>123t amet.</h1>
 </body>
 </html>
